# deploy-agent

./: .gitignore  README.md  pyproject.toml
deploy_agent/: __init__.py  benchmarker.py  cli.py  mcp_server.py  models.py  optimizer.py  report.py  server.py
deploy_agent/static/: index.html
