[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deploy-agent"
version = "0.1.0"
description = "Automated ML deployment optimizer — finds the fastest feasible backend, quantization, and batch size for your model."
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "pydantic>=2.0",
    "torch>=2.1",
    "torchvision>=0.16",
    "onnxruntime>=1.16",
    "numpy>=1.24",
    "rich>=13.0",
    "mcp[cli]>=1.0",
    "thermal-budget-annealing @ git+https://github.com/Chrislysen/Constrained-ML-Deployment.git",
]

[project.optional-dependencies]
cuda = ["onnxruntime-gpu>=1.16"]
dev = ["pytest>=7.0", "httpx>=0.27"]

[project.scripts]
deploy-agent = "deploy_agent.cli:main"

[tool.setuptools.packages.find]
include = ["deploy_agent*"]
